2007-12-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/support/cairo-support.c: (ge_cairo_inner_rectangle),
	(ge_cairo_inner_rounded_rectangle):
	* engines/support/cairo-support.h:
	Add ge_cairo_inner_rectangle and ge_cairo_inner_rounded_rectangle
	functions.

2007-12-02  Benjamin Berg  <benjamin@sipsolutions.net>

	* schema/clearlooks.xml.in.in:
	Fixed the descriptions of the animations and colorize_scrollbar
	options. Thanks for Werner Pantke for pointing this out.

2007-11-29  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw.c: (clearlooks_draw_tab):
	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_tab), (clearlooks_gummy_draw_focus):
	* engines/clearlooks/src/clearlooks_types.h:
	* engines/clearlooks/src/support.c:
	(clearlooks_set_toolbar_parameters):
	* themes/Clearlooks/gtk-2.0/gtkrc:
	Various whitespaces and intentations, BUT, in clearlooks_draw_gummy.c
	I've refined the calculation of the tab stripe and used a new look for 
	listview focus

2007-11-17  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	No shadow on active buttons

2007-11-17  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	Shadings

2007-11-17  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	* engines/clearlooks/src/clearlooks_style.c:
	(clearlooks_style_draw_focus):
	* engines/clearlooks/src/clearlooks_types.h:
	Focus-padding is fixed for buttons, so we won't have troubles
	when apps will override the gtkrc

2007-11-17  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c:
	(clearlooks_gummy_draw_focus):
	Shadings

2007-11-17  Andrea Cimitan  <andrea.cimitan@gmail.com>

	* engines/clearlooks/src/clearlooks_draw_gummy.c: